fix: filter radio container spacing

--- a/src/components/dimension-modal/conditions-modal-content/styles/conditions-modal-content.module.css
+++ b/src/components/dimension-modal/conditions-modal-content/styles/conditions-modal-content.module.css
@@ -13,6 +13,10 @@
     margin-block-start: var(--spacers-dp16);
 }
 
+.tooltipReferenceFirst {
+    margin-block-start: 0;
+}
+
 .tooltipReference > .addConditionButton:disabled {
     pointer-events: none;
 }
